@@ -1,25 +1,38 @@
 package com.itc.funkart.product_service.mapper;
 
-import com.itc.funkart.product_service.dto.request.CartItemResponse;
-import com.itc.funkart.product_service.dto.request.CartResponse;
+import com.itc.funkart.product_service.dto.response.CartItemResponse;
+import com.itc.funkart.product_service.dto.response.CartResponse;
 import com.itc.funkart.product_service.entity.Cart;
 import com.itc.funkart.product_service.entity.CartItem;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
+/**
+ * <h2>CartMapper</h2>
+ * <p>
+ * Logic for transforming complex Cart aggregates into flattened responses.
+ * Calculates totals and sub-totals during the mapping process.
+ * </p>
+ */
 public class CartMapper {
 
+    /**
+     * Transforms a {@link Cart} entity into a comprehensive {@link CartResponse}.
+     * Calculates the total cart amount based on item sub-totals.
+     *
+     * @param cart the user's persistent cart entity.
+     * @return a populated cart response or null if the input is null.
+     */
     public static CartResponse toResponse(Cart cart) {
         if (cart == null) return null;
 
         List<CartItemResponse> itemDtos = cart.getItems().stream()
                 .map(CartMapper::toItemResponse)
-                .collect(Collectors.toList());
+                .toList();
 
         BigDecimal total = itemDtos.stream()
-                .map(CartItemResponse::getSubTotal)
+                .map(CartItemResponse::subTotal)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
         return CartResponse.builder()
@@ -30,13 +43,12 @@ public class CartMapper {
                 .build();
     }
 
+    /**
+     * Helper to map an individual {@link CartItem} to a {@link CartItemResponse}.
+     */
     private static CartItemResponse toItemResponse(CartItem item) {
-        if (item.getProduct() == null) {
-            throw new IllegalStateException("CartItem must have a valid Product reference");
-        }
-
         BigDecimal price = item.getProduct().getPrice();
-        Integer qty = item.getQuantity();
+        int qty = item.getQuantity();
 
         return CartItemResponse.builder()
                 .productId(item.getProduct().getId())
